<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="hideSeparator"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingStart="@dimen/margin_large_1x"
        android:paddingEnd="@dimen/margin_large_1x">

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGrey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{hideSeparator ? View.GONE : View.VISIBLE}"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardCar"
            android:layout_width="120dp"
            android:layout_height="100dp"
            app:cardElevation="0dp"
            android:elevation="0dp"
            android:layout_marginTop="@dimen/margin_large_2x"
            android:layout_marginBottom="@dimen/margin_large_2x"
            app:cardCornerRadius="@dimen/margin_small_4x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/ivCar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mazda_3"
                android:scaleType="centerInside"
                android:paddingBottom="@dimen/margin_medium_2x"
                android:paddingStart="@dimen/margin_medium_1x"
                android:paddingEnd="@dimen/margin_medium_1x"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCarProductionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mazda"
            android:textSize="@dimen/text_size_large_1x"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="2dp"
            android:layout_marginStart="@dimen/margin_small_3x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardCar"
            app:layout_constraintTop_toTopOf="@id/cardCar"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_small_3x"
            app:layout_constraintStart_toEndOf="@id/cardCar"
            app:layout_constraintTop_toBottomOf="@id/tvCarProductionName"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvCarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carId"
                android:textSize="@dimen/text_size_medium_2x"
                android:textColor="@color/lightGrey"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardIdAndCarCapacityDivider"
                android:layout_width="3dp"
                android:layout_height="3dp"
                android:backgroundTint="@color/pink"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="@dimen/margin_small_1x"
                />

            <TextView
                android:id="@+id/tvCarCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_capacity"
                android:textSize="@dimen/text_size_medium_2x"
                android:textColor="@color/lightGrey"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="2dp"/>

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_small_1x"
                android:maxLines="1"
                android:ellipsize="end"
                android:background="@drawable/rounded_corners_dark_grey_stroke"
                android:padding="@dimen/margin_small_4x"
                android:layout_marginStart="@dimen/margin_small_4x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCarProductionName"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvRentalFeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rental_fee_label"
            android:textColor="@color/colorDarkGrey"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium_1x"
            android:layout_marginStart="@dimen/margin_small_3x"
            android:layout_marginTop="@dimen/margin_small_2x"
            app:layout_constraintStart_toEndOf="@id/cardCar"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

        <TextView
            android:id="@+id/tvRenTalFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rental_fee"
            android:textSize="@dimen/text_size_medium_2x"
            android:textColor="@color/lightGrey"
            android:layout_marginStart="@dimen/margin_small_3x"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/cardCar"
            app:layout_constraintBottom_toBottomOf="@id/cardCar"/>

        <TextView
            android:id="@+id/tvMileageFeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mileage_fee_label"
            android:textColor="@color/colorDarkGrey"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium_1x"
            android:layout_marginEnd="@dimen/margin_large_1x"
            android:layout_marginTop="@dimen/margin_small_2x"
            app:layout_constraintEnd_toEndOf="@id/linearLayout"
            app:layout_constraintBottom_toBottomOf="@id/tvRentalFeeLabel"/>

        <TextView
            android:id="@+id/tvMileageFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mileage_fee"
            android:textSize="@dimen/text_size_medium_2x"
            android:textColor="@color/lightGrey"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="@id/tvMileageFeeLabel"
            app:layout_constraintBottom_toBottomOf="@id/cardCar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>