<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/margin_large_1x"
            android:paddingEnd="@dimen/margin_large_1x">

            <TextView
                android:id="@+id/tvEstimatedTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large_3x"
                android:text="@string/estimated_total_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_4x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNotFinalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_final_amount"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_size_medium_2x"
                android:layout_below="@id/tvEstimatedTotalLabel"/>

            <ImageView
                android:id="@+id/ivCheckout"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/ivCheckout"
                android:text="@string/estimated_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_4x"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_medium_2x"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/margin_large_1x"
            android:paddingEnd="@dimen/margin_large_1x">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_medium_3x"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/ic_help"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnCancelBooking"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/margin_large_1x"
            android:paddingEnd="@dimen/margin_large_1x">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_this_booking"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_medium_3x"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/ic_cancel_booking"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</layout>