<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_70"
        android:weightSum="4"
        android:background="@color/primary_color">

        <LinearLayout
            android:id="@+id/layoutRent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_car"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium_1x" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_a_car"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium_2x"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBooking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:src="@drawable/booking"
                android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium_1x"
                app:tint="@color/colorDarkGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookings"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_medium_2x"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRefer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:src="@drawable/refer"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium_1x"
                android:paddingBottom="2dp"
                app:tint="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refer_a_friend"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_medium_2x"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:src="@drawable/setting"
                android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium_1x"
                app:tint="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_medium_2x"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</layout>